# mh-mind

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
mh_mind/: artifacts.py  chat.py  chunk.py  cli.py  config.py  embed.py  llm.py  retrieve.py  store.py
mh_mind/ingest/: apple_notes.py  export_notes.applescript  footnotes.py  word_docs.py
tests/: create_fixture.py  test_footnotes.py
tests/fixtures/: sample_with_footnotes.docx
